# frikfrak

./: .gitignore  .justfile  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  esbuild.js  package-lock.json  package.json
.github/hooks/: README.md  agent-hooks.json  agent-hooks.local.json  hooks-config.ini  hooks-config.json
.schemas/: cookbook.schema.json  tools.schema.json
assets/wasm/: frikfrak_core.wasm
plan/: ast-index.json  heartbeat.md  history.md  npr-feed-cache.json  progress.md  prompts-20260317_220901.txt  psychology-of-agentic-self.md  soul.md  use-hooks.md  wiki-events-cache.json
plan/agent_self/: README.md  agent-handshake.md  agent-ledger.md  claude-copilot-subagent-best-practices.md  creative-arcana-for-pixels.md  future-card-game-extension.md  identity-and-true-will.md  prompt-patterns.md  rituals-and-muscle-memory.md  slant-audit.md  stack-playbook.md  state-index.md  state-machine.md  structure.md  wiki-grounding.md
plan/blueprints/: deterministic-workload-architecture.md  pixel-ui-surfaces.md  product-scope-options.md
plan/playbooks/: deterministic-delivery-playbook.md  dream-review-playbook.md  scope-shaping-playbook.md
plan/runbooks/: extension-smoke-test-runbook.md  session-governance-runbook.md  teletext-feed-and-insights-runbook.md
plan/scripts/: README.md  get-plan-timestamp.ps1  (+3 more)
prompts/: port-miniverse-to-frikfrak.md
src/: coreServer.ts  extension.ts  server.ts  teletextView.ts
wasm/frikfrak_teletext/: Cargo.toml
wasm/frikfrak_teletext/src/: lib.rs
(+58 files in other folders)
